force-app/main/default/objects/QIC_AutoNumber__c/QIC_AutoNumber__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>QIC AutoNumber</label>
</CustomObject>