force-app/main/default/objects/QIC_AutoNumber__c/fields/ClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ClosedStatus</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>