force-app/main/default/objects/QIC_AutoNumber__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QIC Record Type Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>