force-app/main/default/objects/QIC_AutoNumber__c/fields/StartNumber__c.field-meta.xml
<CustomField>
    <fullName>StartNumber__c</fullName>
    <label>StartNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>